# OxideNMS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.tr.md  SECURITY.md  latest.json
.github/workflows/: release.yml
assets/: latest.example.json
docs/: RELEASE.md  ROADMAP.md  TASARIM.md
packaging/windows/: OxideNMS.iss
scripts/: generate-icons.ps1
src/: crypto.rs  error.rs  lib.rs  main.rs  report.rs  settings.rs
src/cli/: mod.rs
src/db/: compliance.rs  devices.rs  jobs.rs  mod.rs  syslog.rs
src/gui/: mod.rs
src/gui/tools/: audit_log.rs  backup.rs  bulk_deploy.rs  compliance.rs  config_history.rs  dashboard.rs  device_manager.rs  diff.rs  discovery.rs  firmware.rs  mod.rs  security.rs  settings_mod.rs  snmp_map.rs  ssh.rs  subnet.rs  syslog.rs  template.rs  topology.rs  vlan.rs
src/i18n/: mod.rs
src/i18n/langs/: az.rs  bg.rs  de.rs  el.rs  en.rs  es.rs  hi.rs  hu.rs  it.rs  kk.rs  ky.rs  mod.rs  pt.rs  ru.rs  tk.rs  tr.rs  uz.rs  zh.rs
src/network/: compliance.rs  diff.rs  discovery.rs  mod.rs  security.rs  subnet.rs
src/update/: mod.rs
